# siptricks

./: CMakeLists.txt  README.md  build.sh
b2bua/: Actions.cpp  Actions.h  CMakeLists.txt  Call.cpp  Call.h  CallDialogSet.cpp  CallDialogSet.h  CallFactory.cpp  CallFactory.h  Callback.cpp  Callback.h  MessageTranslator.cpp  MessageTranslator.h  NewSession.cpp  NewSession.h  StateMachine.cpp  StateMachine.h  main.cpp
bridge/: AddressTranslator.cpp  AddressTranslator.h  AppSubsystem.cpp  AppSubsystem.h  CMakeLists.txt  ClickToCallCmds.h  Conversation.cpp  Conversation.h  ConversationManagerDelegate.cpp  ConversationManagerDelegate.h  ConversationManagerSettings.cpp  ConversationManagerSettings.h  HttpBase.cpp  HttpBase.h  HttpConnection.cpp  HttpConnection.h  MyConversationManager.cpp  MyConversationManager.h  MyMessageDecorator.cpp  MyMessageDecorator.h  Server.cpp  Server.h  UserAgent.cpp  UserAgent.h  Util.cpp  Util.h  WebAdmin.cpp  WebAdmin.h  WebAdminThread.cpp  WebAdminThread.h  bridge.cpp  reConServer.config  reConServer.cpp  reConServer.h  reConServerConfig.cpp  reConServerConfig.h  reConServerProcess.cpp  reConServerProcess.h
cnode/: CMakeLists.txt  Client.cpp  Client.h  Connection.cpp  Connection.h  Message.cpp  Message.h  Properties.cpp  Properties.h  Shutdown.cpp  Shutdown.h  StartUserAgent.cpp  StartUserAgent.h  StopUserAgent.cpp  StopUserAgent.h
erlnode/: rebar.conf  start.sh
erlnode/src/: b2bua.app.src  b2bua.erl  b2bua_server.erl  b2bua_sup.erl
helper/: CMakeLists.txt  Callback.h  Message.cpp  Message.h  MessageTransport.cpp  MessageTransport.h  Queue.cpp  Queue.h
resip/: clicktocall.diff  recon.diff
siplayer/: AbstractState.cpp  AbstractState.h  AbstractStateMachine.cpp  AbstractStateMachine.h  Actions.cpp  Actions.h  CMakeLists.txt  Call.cpp  Call.h  CallDialogSet.cpp  CallDialogSet.h  CallFactory.h  EventPayload.cpp  EventPayload.h  Events.cpp  Events.h  InviteSessionHandler.cpp  InviteSessionHandler.h  State.cpp  State.h  StateChanger.cpp  StateChanger.h  StateContext.h  StateFactory.h  UaThread.cpp  UaThread.h  UserAgent.cpp  UserAgent.h
softphone/: Actions.cpp  Actions.h  CMakeLists.txt  Call.cpp  Call.h  CallDialogSet.cpp  CallDialogSet.h  CallFactory.cpp  CallFactory.h  StateClasses.cpp  StateClasses.h  StateFactory.cpp  StateFactory.h  StateMachine.cpp  StateMachine.h  main.cpp
